syntax = "proto3";

package posts;

option go_package = "github.com/go-park-mail-ru/2022_2_VDonate/internal/microservices/post/protobuf";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "internal/microservices/users/protobuf/users.proto";

message Post {
  uint64 ID = 1;
  uint64 UserID = 2;
  string Content = 4;
  uint64 Tier = 5;
  bool IsAllowed = 6;
  google.protobuf.Timestamp DateCreated = 7;
  repeated string Tags = 8;

  user.LessUser Author = 9;
  uint64 LikesNum = 10;
  bool IsLiked = 11;
}

message PostArray {
  repeated Post posts = 1;
}

message PostID {
  uint64 postID = 1;
}

message PostUserIDs {
  uint64 postID = 1;
  uint64 userID = 2;
}

message Like {
  uint64 userID = 1;
  uint64 postID = 2;
}

message Likes {
  repeated Like likes = 1;
}

message Tag {
  uint64 id = 1;
  string tagName = 2;
}

message TagDep {
  uint64 postID = 1;
  uint64 tagID = 2;
}

message TagDeps {
  repeated TagDep tagDeps = 1;
}

message TagName {
  string tagName = 1;
}

message TagID {
  uint64 tagID = 1;
}

message Comment {
  uint64 ID = 1;
  uint64 UserID = 2;
  uint64 PostID = 4;
  string Content = 5;
  google.protobuf.Timestamp DateCreated = 6;
}

message CommentID {
  uint64 commentID = 1;
}

message CommentContent {
  string content = 1;
}

message CommentArray {
  repeated Comment comments = 1;
}

service Posts {
  rpc GetAllByUserID(user.UserID) returns(PostArray);
  rpc GetPostByID(PostID) returns(Post);
  rpc Create(Post) returns(Post);
  rpc Update(Post) returns(google.protobuf.Empty);
  rpc DeleteByID(PostID) returns(google.protobuf.Empty);
  rpc GetPostsBySubscriptions(user.UserID) returns(PostArray);

  rpc GetLikeByUserAndPostID(PostUserIDs) returns(Like);
  rpc GetAllLikesByPostID(PostID) returns(Likes);
  rpc CreateLike(PostUserIDs) returns(google.protobuf.Empty);
  rpc DeleteLikeByID(PostUserIDs) returns(google.protobuf.Empty);

  rpc CreateTag(TagName) returns(TagID);
  rpc GetTagById(TagID) returns(Tag);
  rpc GetTagByName(TagName) returns(Tag);
  rpc CreateDepTag(TagDep) returns(google.protobuf.Empty);

  rpc GetTagDepsByPostId(PostID) returns(TagDeps);
  rpc DeleteDepTag(TagDep) returns(google.protobuf.Empty);

  rpc CreateComment(Comment) returns(Comment);
  rpc GetCommentByID(CommentID) returns(Comment);
  rpc GetCommentsByPostID(PostID) returns(CommentArray);
  rpc UpdateComment(Comment) returns(google.protobuf.Empty);
  rpc DeleteCommentByID(CommentID) returns(google.protobuf.Empty);
}